[gd_scene load_steps=2 format=3 uid="uid://beh8omgheky4n"]

[ext_resource type="Script" path="res://MainMenu/mmUI.gd" id="1_4cwjr"]

[node name="MmUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4cwjr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Green" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "green"

[node name="Purple" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "purple"

[node name="Rust" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "rust"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Green" to="." method="_on_green_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Purple" to="." method="_on_purple_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Rust" to="." method="_on_rust_pressed"]
